--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -29,7 +29,7 @@ jobs:
         id: set-matrix
         run: |
           TASKS=$(echo $("["${{ env.VAR }}"]"))
-          echo "::set-output name=tools_matrix::${{ env.VAR }}"
+          echo "::set-output name=tools_matrix::["cert_tool","passwords_tool"]"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
       - name: echo json
@@ -41,8 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: get-files
     strategy:
-      matrix: 
-        tool: ${{fromJson(needs.get-files.outputs.tools_matrix)}}
+      matrix: ${{fromJson(needs.get-files.outputs.tools_matrix)}}
     steps:
       - name: builder-sh
-        run: echo ${{ matrix.tool }}
+        run: echo ${{ matrix }}
