--- a/debs/SPECS/4.4.0/wazuh-manager/debian/rules
+++ b/debs/SPECS/4.4.0/wazuh-manager/debian/rules
@@ -16,8 +16,10 @@ export DH_VERBOSE=1
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 export PKG_DIR=debian/wazuh-manager
+export DBG_DIR=debian/wazuh-manager-dbg
 
 export TARGET_DIR=${CURDIR}/${PKG_DIR}
+export TARGET_DIR_SYMS=${CURDIR}/${DBG_DIR}
 
 # Package build options
 export INSTALLATION_DIR="/var/ossec"
@@ -190,6 +192,10 @@ override_dh_install:
 	cp etc/templates/config/ubuntu/18/04/sca.files ${TARGET_DIR}$(INSTALLATION_SCRIPTS_DIR)/sca/ubuntu/18/04
 	cp etc/templates/config/ubuntu/20/04/sca.files ${TARGET_DIR}$(INSTALLATION_SCRIPTS_DIR)/sca/ubuntu/20/04
 
+	# Add debug symbols
+	mkdir -p ${TARGET_DIR_SYMS}/${INSTALLATION_DIR}
+	mv ${TARGET_DIR}/${INSTALLATION_DIR}/.symbols ${TARGET_DIR_SYMS}/${INSTALLATION_DIR}/.symbols
+
 override_dh_fixperms:
 	dh_fixperms
 	# Fix Python permissions
@@ -204,6 +210,5 @@ override_dh_auto_clean:
 	$(MAKE) -C src clean
 
 override_dh_strip:
-	dh_strip --no-automatic-dbgsym --exclude=dh_strip --no-automatic-dbgsym --exclude=${PKG_DIR}${INSTALLATION_DIR}/framework/python
 
 .PHONY: override_dh_install override_dh_strip override_dh_auto_clean override_dh_auto_build override_dh_auto_configure override_dh_fixperms
