--- a/arch/SPECS/wazuh-agent/arch/PKGBUILD
+++ b/arch/SPECS/wazuh-agent/arch/PKGBUILD
@@ -8,7 +8,7 @@ license=(GPL2)
 source=('PARAM_SOURCE_FILE'
         'wazuh.sysusers')
 sha512sums=('SKIP'
-            'adce723356b0b533854700d4c367cedf4caba13146e1b754d60e72939d301d248a48f7b61d82c9104616f1e7720e4712cca9f37d3d4de37f1d0b5581c159f3d6')
+            'f677eff94751d7ac485511cac8a19a2fb0294cce3434f77b38c3ad62d7a63c1ed76d2fa6f48a18fdbe3a11f498625b1ce3c8e73dc3db768572b257c0dbeb594a')
 depends=('python' 'brotli')
 noextract=('PARAM_SOURCE_FILE')
 backup=('PARAM_INSTALLATION_BACKUP_DIR/etc/client.keys'
@@ -53,6 +53,7 @@ package() {
 	# Copying systemd file
 	mkdir -p ${pkgdir}/usr/lib/systemd/system/
 	install -m 0644 src/init/templates/wazuh-agent.service ${pkgdir}/usr/lib/systemd/system/
+    sed -i 's:WAZUH_HOME_TMP:PARAM_INSTALLATION_DIR:g' ${pkgdir}/usr/lib/systemd/system/wazuh-agent.service
 
 	# Generating permission restoration file for postinstall
 	mkdir -p ${pkgdir}/"PARAM_INSTALLATION_SCRIPTS_DIR"
@@ -110,6 +111,8 @@ package() {
 
 	cp etc/templates/config/generic/sca.files ${pkgdir}/"PARAM_INSTALLATION_SCRIPTS_DIR"/sca/generic
 	cp etc/templates/config/generic/sca.manager.files ${pkgdir}/"PARAM_INSTALLATION_SCRIPTS_DIR"/sca/generic
+
+    cp -r src/{REVISION,VERSION} ${pkgdir}/"PARAM_INSTALLATION_SCRIPTS_DIR"/src
 
 	mkdir -p ${pkgdir}/"PARAM_INSTALLATION_SCRIPTS_DIR"/src/init
 	cp -r src/init/*  ${pkgdir}/"PARAM_INSTALLATION_SCRIPTS_DIR"/src/init
