--- a/stack/indexer/deb/debian/rules
+++ b/stack/indexer/deb/debian/rules
@@ -36,7 +36,7 @@ export LIB_DIR=/var/lib/${NAME}
 export PID_DIR=/run/${NAME}
 export SYS_DIR=/usr/lib
 export BASE_DIR=${NAME}-*
-export INDEXER_FILE=wazuh-indexer-base-$(BASE_VERSION)-linux-x64.tar.xz
+export INDEXER_FILE=wazuh-indexer-base-$(BASE_VERSION)-$(BASE_REVISION)-linux-x64.tar.xz
 export REPO_DIR=/root/unattended_installer
 
 # -----------------------------------------------------------------------------
@@ -64,7 +64,7 @@ override_dh_install:
 	if [ "$(BASE)" = "s3" ]; then \
 		curl -kOL https://packages-dev.wazuh.com/stack/indexer/base/$(INDEXER_FILE) ;\
 	else \
-		cp /root/output/wazuh-indexer-base-$(BASE_VERSION)-linux-x64.tar.xz ./ ;\
+		cp /root/output/$(INDEXER_FILE) ./ ;\
 	fi
 	tar -xf $(INDEXER_FILE)
 
@@ -122,6 +122,9 @@ override_dh_install:
 
 	chown $(USER):$(GROUP) -R $(TARGET_DIR)
 	chmod ug+x $(TARGET_DIR)$(INSTALLATION_DIR)/*
+
+	chown $(USER):$(GROUP) $(TARGET_DIR)$(INSTALLATION_DIR)/VERSION
+	chmod 440 $(TARGET_DIR)$(INSTALLATION_DIR)/VERSION
 
 # -----------------------------------------------------------------------------
 
