--- a/documentation-templates/elastic-basic/filebeat.yml
+++ b/documentation-templates/elastic-basic/filebeat.yml
@@ -21,3 +21,5 @@ output.elasticsearch.ssl.key: /etc/filebeat/certs/filebeat.key
 output.elasticsearch.ssl.certificate_authorities: /etc/filebeat/certs/ca/ca.crt
 output.elasticsearch.ssl.verification_mode: strict
 output.elasticsearch.username: elastic
+
+logging.metrics.enabled: false
