--- a/debs/Debian/amd64/Dockerfile
+++ b/debs/Debian/amd64/Dockerfile
@@ -1,18 +1,19 @@
-FROM debian:7
+FROM --platform=linux/amd64 debian:stretch
 
 ENV DEBIAN_FRONTEND noninteractive
 
 # Installing necessary packages
-RUN echo "deb http://archive.debian.org/debian/ wheezy contrib main non-free" > /etc/apt/sources.list && \
-    echo "deb-src http://archive.debian.org/debian/ wheezy contrib main non-free" >> /etc/apt/sources.list && \
-    apt-get update && apt-get install -y apt-utils && \
-    apt-get install -y --force-yes \
-    curl gcc make sudo wget expect gnupg perl-base=5.14.2-21+deb7u3 perl \
-    libc-bin=2.13-38+deb7u10 libc6=2.13-38+deb7u10 libc6-dev build-essential \
-    cdbs devscripts equivs automake autoconf libtool libaudit-dev selinux-basics \
-    libdb5.1=5.1.29-5 libdb5.1-dev libssl1.0.0=1.0.1e-2+deb7u20 procps gawk libsigsegv2
+RUN echo "deb http://deb.debian.org/debian stretch contrib non-free" >> /etc/apt/sources.list && \
+    echo "deb-src http://deb.debian.org/debian stretch main contrib non-free" >> /etc/apt/sources.list && \
+    apt-get update && apt-get install -y apt apt-utils  \
+    curl gcc g++ make sudo expect gnupg \
+    perl-base perl wget libc-bin libc6 libc6-dev \
+    build-essential cdbs devscripts equivs automake \
+    autoconf libtool libaudit-dev selinux-basics \
+    libdb5.3 libdb5.3 libssl1.0.2 libssl1.0-dev gawk libsigsegv2
 
-RUN apt-get update && apt-get build-dep python3.2 -y
+# Add Debian's source repository and, Install NodeJS 12
+RUN apt-get update &&  apt-get build-dep python3.5 -y
 
 RUN curl -OL http://packages.wazuh.com/utils/gcc/gcc-9.4.0.tar.gz && \
     tar xzf gcc-9.4.0.tar.gz  && cd gcc-9.4.0/ && \
