--- a/ova/Vagrantfile
+++ b/ova/Vagrantfile
@@ -3,7 +3,8 @@
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "gbailey/amzn2"
+  config.vm.box_url = "https://packages-dev.wazuh.com/vms/ova/amazonlinux2.box"
+  config.vm.box = "amazonlinux2"
   config.vm.hostname = "wazuh-server"
   config.vm.provider "virtualbox" do |vb|
     vb.name = "vm_wazuh"
