--- a/stack/indexer/deb/docker/amd64/Dockerfile
+++ b/stack/indexer/deb/docker/amd64/Dockerfile
@@ -2,6 +2,10 @@ FROM debian:8
 
 ENV DEBIAN_FRONTEND noninteractive
 
+RUN echo 'Acquire::Check-Valid-Until "false";' >> /etc/apt/apt.conf && \
+    echo "deb http://archive.debian.org/debian jessie contrib main non-free" > /etc/apt/sources.list && \
+    echo "deb http://archive.debian.org/debian-security jessie/updates main" >> /etc/apt/sources.list
+
 # Installing necessary packages
 RUN apt-get update && apt-get install -y --force-yes apt-utils && \
     apt-get install -y --force-yes \
