--- a/.github/workflows/offline-installation.yml
+++ b/.github/workflows/offline-installation.yml
@@ -3,7 +3,8 @@ on:
   pull_request:
     paths:
       - 'unattended_installer/install_functions/wazuh-offline-download.sh'
-      
+  workflow_dispatch:
+
 jobs:
   Build-wazuh-install-script:
     runs-on: ubuntu-latest
@@ -28,7 +29,7 @@ jobs:
           path: |
             unattended_installer/wazuh-install.sh
           if-no-files-found: error
-          
+
   Test-offline-installation-debian:
     runs-on: ubuntu-latest
     needs: Build-wazuh-install-script
@@ -41,7 +42,7 @@ jobs:
 
       - name: Move unattended script
         run: cp $GITHUB_WORKSPACE/wazuh-install.sh $GITHUB_WORKSPACE/.github/actions/offline-installation/wazuh-install.sh
-      
+
       - name: Run script
         run: sudo bash $GITHUB_WORKSPACE/.github/actions/offline-installation/offline-installation.sh
 
@@ -54,9 +55,9 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: script
-      
+
       - name: Move unattended script
         run: cp $GITHUB_WORKSPACE/wazuh-install.sh $GITHUB_WORKSPACE/.github/actions/offline-installation/wazuh-install.sh
-      
+
       - name: Launch docker and run script
         run: sudo docker run -v $GITHUB_WORKSPACE/.github/actions/offline-installation/:/tests centos:centos7 bash /tests/offline-installation.sh
